[package]
name = "rusty-dragon"
version = "0.9.9"
edition = "2021"
authors = ["Gokul Chandar"]
description = "Rusty Dragon — a tiny, from-scratch chess engine, compiled to WebAssembly"
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

# Keep the .wasm binary as small as possible — this engine's whole
# philosophy is "small and readable", so the build should reflect that.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# wasm-pack runs Binaryen's wasm-opt as a post-processing pass. Recent
# rustc versions emit "bulk memory" instructions (memory.copy/memory.fill)
# by default for wasm32-unknown-unknown, which older wasm-opt rejects
# unless the feature is explicitly enabled here.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
